[package]
name = "portfolio"
description = "A portfolio generator"
version = "0.1.0"
authors = ["Austin Baugh <abaugh@pdx.edu>"]
edition = "2018"
repository = "https://github.com/austinsheep/austinsheep.github.io"
readme = "README.md"
license = "MIT"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"] # Don't forget this!

[dependencies]
wasm-bindgen = "0.2.48"
ron = "0.5.1"
serde = { version = "1", features = ["serde_derive"] }
futures-signals = "0.3.0"
lazy_static = "1.0.0"
dominator = "0.5.6"
log = "0.4"
console_log = "0.1"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
