[package]
name = "portfolio"
description = "A portfolio generator"
version = "0.2.0"
repository = "https://github.com/austinsheep/austinsheep.github.io"
authors = ["Austin Baugh <austinsbaugh@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
# This commit points to Seed 0.7.0 with important fixes.
# Replace with `seed = "0.8.0"` (or newer) once released.
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
ron = "0.6"
serde = { version = "1", features = ["serde_derive"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
